deploying-on-minikube/test-istio-mtls/istio-ingress-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-my-gateway
  namespace: commontools
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "app-1.ajit.de"
    - "app-2.ajit.de"
---
#Use following wild card domain gateway only if this wilde card domain will be used by one namespace
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: istio-my-gateway
#spec:
#  selector:
#    istio: ingressgateway # use Istio default gateway implementation
#  servers:
#  - port:
#      number: 443
#      name: https
#      protocol: HTTPS
#    tls:
#      mode: SIMPLE
#      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#      privateKey: /etc/istio/ingressgateway-certs/tls.key
#    hosts:
#    - "*.ajit.de"
