deploying-on-minikube/test-istio-mtls/app-with-istio-2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: app-with-istio-2
  name: app-with-istio-2
  namespace: commontools
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app-with-istio-2
  template:
    metadata:
      labels:
        run: app-with-istio-2

    spec:
     volumes:
      - name: config-volume
        configMap:
          name: ing-conf
     containers:
      - image: ajitchahal/nginx-2
        imagePullPolicy: Always
        name: app-with-istio-2
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: config-volume
          subPath: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  httpbin_mapping
      prefix: /hello2/
      service: http://app-with-istio-2.commontools:80
      tls: upstream
      rewrite: /
  labels:
    run: app-with-istio-2
  name: app-with-istio-2
  namespace: commontools
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    run: app-with-istio-2
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-my-vs-2
spec:
  hosts:
  - "app-2.ajit.de"
  gateways:
  - istio-my-gateway
  http:
  - match:
    route:
    - destination:
        port:
          number: 80
        host: app-with-istio-2
